web/2.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: web
  labels:
    app: hello
spec:
  # deployment will take care of any pod matchingLabels app-hello
  selector:
    matchLabels:
      app: hello
  # pod template
  template:
    metadata:
      # required: define label for pod (used by higher k8s objects: Service, Deployment)
      labels:
        app: hello
    spec:
      containers:
        - name: web-container
          image: nginx
          ports:
            # https://stackoverflow.com/a/65270688/2122990
            - name: web-port
              containerPort: 80
