web/3.service.yaml
apiVersion: v1
# A Service provides a stable IP/DNS name for a group of dynamic Pods.
kind: Service
metadata:
  name: svc-web
  namespace: web
  labels:
    app: hello
spec:
  # When traffic hits this Service it checks selector to which Pod to route the traffic
  selector:
    app: hello
  ports:
    - protocol: TCP
      targetPort: web-port
      port: 80
      nodePort: 30123
  type: NodePort
