web/4.ingress-resource.yaml
apiVersion: networking.k8s.io/v1
# Gateway doesn't use labels but Service **Name**
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
spec:
  ingressClassName: nginx
  rules:
    - host: my-web.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-web
                port:
                  number: 30123
